--- a/BlazorHybrid.RCL/Components/Pages/Counter.razor
+++ b/BlazorHybrid.RCL/Components/Pages/Counter.razor
@@ -6,6 +6,7 @@
 
 <p role="status">Current count: @currentCount</p>
 
+<!-- <input type="text" @bind="currentCount"> -->
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
